styles/rsvp.css
body {
    margin: 0;
    background-color: rgb(165, 145, 130);
}

main {
    margin: 0;
    background-color: white;
    max-width: 100vw;
    max-height: 92vh;
    width: 100%;
    height: 92vh;
    color:rgb(165, 145, 130);
    display:flex;
    justify-content: space-around;
    overflow: scroll;
    flex-direction: column;
}

main > div:first-of-type {
    position: relative;
    margin-top: 20vh;
    margin-bottom: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

main > div > h1 {
    font-size: 30px;
}

main > div > h3 {
    font-size: 24px;
}

main > div > span {
    border-top: 1px solid rgb(165, 145, 130);
    width: 50%;
}

#container {
    margin-top: 15vh;
}

article {
    float: left;
    border-right: 1px solid rgb(165, 145, 130);
    max-width: 50vw;
    width: 50vw;
    padding: 20px 20px 20px 40px;
}

aside {
    display: flex;
    flex-direction: column;
    padding-left: 25px;
    align-items: center;
    justify-content: space-around;
}

form {
    display: grid;
    row-gap: 2vh;
    column-gap: 5vw;
}

fieldset {
    margin: 0;
    padding: 0;
    padding-bottom: 2vh;
    border: 0px;
    display: grid;
    row-gap: 2vh;
    column-gap: 0;
}

fieldset > div {
    width: 3vw;
    height: 3vw;
}

fieldset > label > input {
    display: none;
}

fieldset > label {
    grid-column: 3;
    grid-row: 1;
    width: min-content;
    font-size: 30px;
    cursor: pointer;
}

.check_box {
    grid-column: 2;
    grid-row: 1;
    background-color: rgb(165, 145, 130);
    width: 30px;
    height: 30px;
    margin: 0 20px;
    border-radius: 10px;
    box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
    
}

.check_box::before, .check_box::after {
    position: relative;
    display: block;
    top: 13px;
    right: 2px;
    width: 35px;
    height: 2px;
    border-radius: 100%;
    content: "";
    background-color: white;
    visibility: hidden;
}

.check_box::after {
    transform: rotate(-47deg);
    top: 12px;
}

.check_box::before {
    transform: rotate(45deg);
}

fieldset > label > input:checked ~ .check_box::before, fieldset > label > input:checked ~ .check_box::after {
    visibility: visible;
}

.first {
    grid-column: 1;
}

.po {
    display: none;
}

label {
    grid-column: 1;
    width: 10vw;
}

input {
    grid-column: 2;
    border-radius: 10px;
    background-color:rgb(165, 145, 130);
    border: 0;
    color: white;
    border:0px solid rgb(165, 145, 130);
    outline: none;
    height: 5vh;
    box-shadow: 2px 5px 10px rgba(0,0,0,0.2), 2px 6px 20px rgba(0,0,0,0.19);
}

input:focus {
    box-shadow: 0px 10px 5px rgba(0,0,0,0.2), 2px 7px 10px rgba(0,0,0,0.19);
}

input[type="submit"] {
    padding: 5px 10px;
    height:max-content;
    width: max-content;
    grid-column: 2;
    text-align: center;
    color: white;
}

